<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:paddingLeft="5dp"
    android:paddingTop="5dp">
<GridLayout  
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:focusableInTouchMode="true"     
 	android:columnCount="2">    
	<TextView
	    android:layout_columnSpan="2"
	    android:layout_gravity="left"
	    android:text="@string/opciones"
	    android:textSize="18sp"
	    android:textStyle="bold" />
    <View
   		android:layout_column="0"
        android:layout_height="1dp"
        android:layout_columnSpan="2"
        android:background="@color/azul"/>  
	<TextView      
        android:layout_column="0"
        android:layout_gravity="left"
       	android:text="@string/estado_civil" /> 	
   	 <Spinner	
 		android:layout_column="1"
 		android:layout_width="120dp"
 		android:id="@+id/estado_spinner"
 		android:layout_gravity="left"/>   	
   	 <TextView	
        android:layout_column="0"
        android:layout_gravity="left"
        android:text="@string/anyo_nacimiento" />
	<EditText 
    	android:imeOptions="actionDone"    
    	style="@style/Texto"
    	android:layout_gravity="left"
    	android:layout_column="1"
    	android:id="@+id/anyo_edittext"   	  	
   	    android:layout_width="77sp" 
  		android:inputType="number"
  		android:maxLength="4"
		android:digits="0123456789" /> 	
	<TextView
      	android:layout_column="0"
        android:layout_gravity="left"
       	android:text="@string/sueldo_bruto_anual" />
	<EditText 
    	style="@style/Texto"
    	android:imeOptions="actionDone" 
    	android:id="@+id/sueldo_edittext" 
   	    android:layout_width="85dp" 
  		android:layout_gravity="left"
    	android:layout_column="1"
  		android:inputType="number"
  		android:maxLength="7"
		android:digits="0123456789" />
	<TextView
        android:layout_column="0"
        android:layout_gravity="left"
       	android:text="@string/categoria" />
   	 <Spinner
 		android:id="@+id/categoria_spinner"
 		android:layout_gravity="left"
 		android:layout_width="120dp"
    	android:layout_column="1" />
	<TextView
        android:layout_column="0"
        android:layout_gravity="left"
       	android:text="@string/deduccion" />
   	 <Spinner
 		android:id="@+id/deduccion_spinner"
 		android:layout_gravity="left"
    	android:layout_column="1" />
   	 <TextView
        android:layout_column="0"
        android:layout_gravity="left"      
        android:text="@string/hijos1" />
	<EditText 
    	style="@style/Texto"
    	android:imeOptions="actionDone" 
    	android:layout_column="1" 
    	android:layout_gravity="left"
    	android:id="@+id/hijos1_edittext" 
   	    android:layout_width="55dp" 
  		android:inputType="number"
  	  	android:maxLength="2"
		android:digits="0123456789" />

	<TextView
	    android:layout_column="0"
	    android:layout_gravity="left"
	    android:lines="2"
	    android:width="185dp"
	    android:text="@string/hijos2" />

	<EditText 
    	style="@style/Texto"
    	android:imeOptions="actionDone" 
    	android:layout_column="1" 
    	android:layout_gravity="left"
    	android:id="@+id/hijos2_edittext" 
   	    android:layout_width="55dp" 
  	  	android:inputType="number"
  		android:maxLength="2"
		android:digits="0123456789" />
	 <TextView
		android:layout_column="0"
        android:layout_gravity="left" 
        android:lines="2"
	    android:width="185dp"       
       	android:text="@string/asc1" />
	<EditText 
    	style="@style/Texto"
    	android:imeOptions="actionDone" 
    	android:layout_column="1" 
    	android:layout_gravity="left"
    	android:id="@+id/asc1_edittext" 
  		android:inputType="number"
  		android:layout_width="55dp" 
  		android:maxLength="2"
		android:digits="0123456789" />
	<TextView
        android:layout_column="0"
        android:layout_gravity="left"  
        android:lines="2"
	    android:width="185sp"
        android:text="@string/asc2" />
	<EditText 
    	style="@style/Texto"
    	android:imeOptions="actionDone" 
    	android:layout_column="1" 
    	android:layout_gravity="left"
    	android:id="@+id/asc2_edittext" 
   	    android:layout_width="55dp" 
  		android:inputType="number"
  		android:maxLength="2"
		android:digits="0123456789" />
	<TextView
        android:layout_column="0"
        android:layout_gravity="left"   
       	android:text="@string/pagas" />
   	 <Spinner
 		android:layout_column="1" 
    	android:layout_gravity="left"
 		android:id="@+id/pagas_spinner" />

 		<Space
        android:layout_row="11"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"    />
 	<TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:text="@string/resultado" />   
    <View
   		android:layout_column="0"
        android:layout_height="1dp"
        android:layout_columnSpan="2"
        android:background="@color/azul"/>   
	 <TextView
        android:layout_column="0"
        android:layout_gravity="left"   
        android:paddingTop="8dp"
        android:text="@string/nomina" />
  <TextView
        android:layout_column="1"
        android:layout_gravity="left"          
       android:id="@+id/nomina_textview" />
   <TextView
       android:layout_column="0"
       android:layout_gravity="left"   
       android:paddingTop="8dp"
       android:text="@string/extra" />
  <TextView
       android:layout_column="1"
       android:layout_gravity="left"   
       android:paddingTop="3dp"
       android:id="@+id/extra_textview" />
</GridLayout>
</ScrollView>



